<resources>
    <string name="app_name">WCC MarsProject</string>
    <string name="title_activity_login">Sign in</string>
    <string name="about">About WCC MarsProject</string>
    <string name="copyright">Copyright 2016, WCC</string>
    <string name="version">Version: %s</string>
    <string name="support_msg">For assistance with this application, please contact our support team at <a href="mailto:lee@wccnet.edu?Subject=WCC%20Android%20Support">lee@wccnet.edu</a></string>
    <string name="website"><a href="http://www.wccnet.edu">http://www.wccnet.edu/</a></string>
    <string name="phone"><a href="tel:+1-734-973-3300">734-WS-EE00</a></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
